--- a/templates/ad.html
+++ b/templates/ad.html
@@ -113,7 +113,7 @@
 
                     <div class="entry__content">
                         <p class="lead">
-                            {{ ad.content }}
+                            {{ ad.content|safe }}
                         </p>
                     </div> <!-- entry__content -->
 
