--- a/templates/ad.html
+++ b/templates/ad.html
@@ -37,7 +37,7 @@
 
             <div class="s-header__content column">
                 <h1 class="s-header__logotext">
-                    <a href="index.html" title="">We are recruiting a team to complete the dungeon.</a>
+                    <a href="../index.html" title="">We are recruiting a team to complete the dungeon.</a>
                 </h1>
                 <p class="s-header__tagline">If you satisfy the requirements, come.</p>
             </div>
@@ -49,7 +49,7 @@
            <div class="row">
 
                 <ul class="s-header__nav">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="../index.html">Home</a></li>
                     <li class="has-children"><a href="#0">Dropdown</a>
                         <ul>
                             <li><a href="#0">Submenu 01</a></li>
@@ -57,15 +57,15 @@
                             <li><a href="#0">Submenu 03</a></li>
                         </ul>
                     </li>
-                    <li><a href="demo.html">Demo</a></li>	
-                    <li><a href="archives.html">Archives</a></li>
+                    <li><a href="../demo.html">Demo</a></li>
+                    <li><a href="../archives.html">Archives</a></li>
                     <li class="has-children current"><a href="#0">Blog</a>
                         <ul>
-                            <li><a href="blog.html">Blog Entries</a></li>
-                            <li><a href="single.html">Single Blog</a></li>
+                            <li><a href="../blog.html">Blog Entries</a></li>
+                            <li><a href="../single.html">Single Blog</a></li>
                         </ul>
                     </li>
-                    <li><a href="page.html">Page</a></li>
+                    <li><a href="../page.html">Page</a></li>
                 </ul> <!-- end #nav -->
 
            </div> 
@@ -91,7 +91,7 @@
                     <header class="entry__header">
 
                         <h2 class="entry__title h1">
-                            <a href="single.html" title="">{{ ad.title }}</a>
+                            <a href="../single.html" title="">{{ ad.title }}</a>
                         </h2>
 
                         <div class="entry__meta">
