--- a/templates/ad.html
+++ b/templates/ad.html
@@ -40,6 +40,7 @@
                     <a href="../index.html" title="">We are recruiting a team to complete the dungeon.</a>
                 </h1>
                 <p class="s-header__tagline">If you satisfy the requirements, come.</p>
+                <p class="s-header__tagline">{{ user }}</p>
             </div>
 
         </div> <!-- end row -->
