--- a/templates/account/account_inactive.html
+++ b/templates/account/account_inactive.html
@@ -1,4 +1,4 @@
-{% extends "account/base_entrance.html" %}
+{% extends "account/entrance.html" %}
 {% load i18n %}
 {% load allauth %}
 {% block head_title %}
@@ -10,12 +10,16 @@
     {% endelement %}
     {% element p %}
         {% translate "This account is inactive." %}
-        {% translate "An activation code has been sent to your email." %}
+    {% endelement %}
+    {% element p %}
+        {% translate "Enter the activation code." %}
+    {% endelement %}
+
         <form action="{% url 'verify-code' %}" method="post">
         {% csrf_token %}
             <label for="user_code">Activation code:</label>
                 <input type="text" id="user_code" name="user_code" placeholder="enter the code" required/>
                 <button type="submit">Check</button>
         </form>
-    {% endelement %}
+
 {% endblock content %}
