add reply template

--- a/templates/ad1.html
+++ b/templates/ad1.html
@@ -5,6 +5,16 @@
     <title>Advertisement {{ ad.pk }}</title>
 </head>
 <body>
+    <!-- Блок событийных (контекстных) уведомлений -->
+    {% if messages %}
+        <div>
+            <strong>{% trans "Messages:" %}</strong>
+            <ul>
+                {% for message in messages %}<li>{{ message }}</li>{% endfor %}
+            </ul>
+        </div>
+    {% endif %}
+
     <!-- Активный пользователь -->
     <h3>Активный пользователь: {{ user }}</h3>
 
