--- a/templates/ad.html
+++ b/templates/ad.html
@@ -136,7 +136,11 @@
                                             <div class="comment__meta">
                                                 <div class="comment__time">{{ reply.update_date }}</div>
                                                 <div class="comment__reply">
-                                                    <a class="comment-reply-link" href="#0">Reply</a>
+                                                    {% if reply.accept %}
+                                                        <a class="comment-reply-link" style="color: green; font-weight: bold;">Reply</a>
+                                                    {% else %}
+                                                        <a class="comment-reply-link">Reply</a>
+                                                    {% endif %}
                                                 </div>
                                             </div>
                                         </div>
