--- a/templates/ad.html
+++ b/templates/ad.html
@@ -28,15 +28,15 @@
             <div class="s-header__content column">
                 <h1 class="s-header__logotext">
 
-                        <!-- Блок событийных (контекстных) уведомлений -->
-                        {% if messages %}
-                            <div>
-                                <strong>{{ "Messages:" }}</strong>
-                                <ul>
-                                    {% for message in messages %}<li>{{ message }}</li>{% endfor %}
-                                </ul>
-                            </div>
-                        {% endif %}
+                    <!-- Блок событийных (контекстных) уведомлений -->
+                    {% if messages %}
+                        <div>
+                            <strong>{{ "Messages:" }}</strong>
+                            <ul>
+                                {% for message in messages %}<li>{{ message }}</li>{% endfor %}
+                            </ul>
+                        </div>
+                    {% endif %}
                 </h1>
             </div>
 
@@ -120,20 +120,22 @@
 
                                             <div class="comment__meta">
                                                 <div class="comment__time">{{ reply.update_date }}</div>
-                                                <div class="comment__reply">
-                                                    {%  if user == ad.user %}
-                                                        {% if reply.accept %}
-                                                            <a style="color: green; font-weight: bold;">Accept</a>
-                                                        {% else %}
-                                                            <button><a href="{% url 'accept-reply' pk=reply.pk %}">Confirm</a></button>
-                                                        {% endif %}
-                                                    {% endif %}
-                                                </div>
                                             </div>
                                         </div>
 
                                         <div class="comment__text">
                                             <p>{{ reply.content }}</p>
+                                        </div>
+
+                                        <div class="comment__reply">
+                                            {%  if user == ad.user %}
+                                                <button><a href="{% url 'delete-reply' pk=reply.pk %}">Delete</a></button>
+                                                {% if reply.accept %}
+                                                    <a style="color: green; font-weight: bold;">Accept</a>
+                                                {% else %}
+                                                    <button><a href="{% url 'accept-reply' pk=reply.pk %}">Confirm</a></button>
+                                                {% endif %}
+                                            {% endif %}
                                         </div>
 
                                     </div>
