--- a/templates/ad_create.html
+++ b/templates/ad_create.html
@@ -24,17 +24,18 @@
         <div class="row">
 
             <div class="s-header__content column">
-                <h1 class="s-header__logotext">
-                    <!-- Блок событийных (контекстных) уведомлений -->
-                    {% if messages %}
+                {% if messages %}
+                    <div class="alert-box alert-box--info hideit">
+
                         <div>
                             <strong>{{ "Messages:" }}</strong>
                             <ul>
                                 {% for message in messages %}<li>{{ message }}</li>{% endfor %}
                             </ul>
                         </div>
-                    {% endif %}
-                </h1>
+
+                    </div>
+                {% endif %}
             </div>
         </div> <!-- end row -->
 
