--- a/templates/ads.html
+++ b/templates/ads.html
@@ -31,19 +31,18 @@
         <div class="row">
 
             <div class="s-header__content column">
-                <h1 class="s-header__logotext">
-                    <a href="index.html" title="">
-                        <!-- Блок событийных (контекстных) уведомлений -->
-                        {% if messages %}
+                {% if messages %}
+                    <div class="alert-box alert-box--info hideit">
+
                             <div>
                                 <strong>{{ "Messages:" }}</strong>
                                 <ul>
                                     {% for message in messages %}<li>{{ message }}</li>{% endfor %}
                                 </ul>
                             </div>
-                        {% endif %}
-                    </a>
-                </h1>
+
+                    </div>
+                {% endif %}
             </div>
 
         </div> <!-- end row -->
