--- a/templates/reply_ad_user.html
+++ b/templates/reply_ad_user.html
@@ -26,19 +26,18 @@
         <div class="row">
 
             <div class="s-header__content column">
-                <h1 class="s-header__logotext">
-                    <a href="index.html" title="">
-                        <!-- Блок событийных (контекстных) уведомлений -->
-                        {% if messages %}
-                            <div>
-                                <strong>{{ "Messages:" }}</strong>
-                                <ul>
-                                    {% for message in messages %}<li>{{ message }}</li>{% endfor %}
-                                </ul>
-                            </div>
-                        {% endif %}
-                    </a>
-                </h1>
+                {% if messages %}
+                    <div class="alert-box alert-box--info hideit">
+
+                        <div>
+                            <strong>{{ "Messages:" }}</strong>
+                            <ul>
+                                {% for message in messages %}<li>{{ message }}</li>{% endfor %}
+                            </ul>
+                        </div>
+
+                    </div>
+                {% endif %}
             </div>
 
         </div> <!-- end row -->
